.stack-work/logs/unix-compat-0.5.0.1.log
Configuring unix-compat-0.5.0.1...
Preprocessing library for unix-compat-0.5.0.1..
Building library for unix-compat-0.5.0.1..
[1 of 8] Compiling System.PosixCompat.Files ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Files.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Files.o )
[2 of 8] Compiling System.PosixCompat.Temp ( src/System/PosixCompat/Temp.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Temp.o )
[3 of 8] Compiling System.PosixCompat.Time ( src/System/PosixCompat/Time.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Time.o )
[4 of 8] Compiling System.PosixCompat.Types ( src/System/PosixCompat/Types.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Types.o )
[5 of 8] Compiling System.PosixCompat.Extensions ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Extensions.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Extensions.o )
[6 of 8] Compiling System.PosixCompat.Unistd ( src/System/PosixCompat/Unistd.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/Unistd.o )
[7 of 8] Compiling System.PosixCompat.User ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/User.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat/User.o )
[8 of 8] Compiling System.PosixCompat ( src/System/PosixCompat.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.0.1.0/build/System/PosixCompat.o )
cbits/HsUnixCompat.c: In function ‘unix_major’:

[;1mcbits/HsUnixCompat.c:9:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘major’; did you mean ‘unix_major’? [-Wimplicit-function-declaration]
         return major(dev);
                ^~~~~
                unix_major[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m9 |[0m[0m     return [;1m[31mm[0m[0major(dev);
[;1m[34m  |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mcbits/HsUnixCompat.c: In function ‘unix_minor’:

[;1mcbits/HsUnixCompat.c:14:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘minor’; did you mean ‘unix_minor’? [-Wimplicit-function-declaration]
         return minor(dev);
                ^~~~~
                unix_minor[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m14 |[0m[0m     return [;1m[31mm[0m[0minor(dev);
[;1m[34m   |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mcbits/HsUnixCompat.c: In function ‘unix_makedev’:

[;1mcbits/HsUnixCompat.c:19:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘makedev’; did you mean ‘unix_makedev’? [-Wimplicit-function-declaration]
         return makedev(maj, min);
                ^~~~~~~
                unix_makedev[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m19 |[0m[0m     return [;1m[31mm[0m[0makedev(maj, min);
[;1m[34m   |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mcbits/HsUnixCompat.c: In function ‘unix_major’:

[;1mcbits/HsUnixCompat.c:9:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘major’; did you mean ‘unix_major’? [-Wimplicit-function-declaration]
         return major(dev);
                ^~~~~
                unix_major[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m9 |[0m[0m     return [;1m[31mm[0m[0major(dev);
[;1m[34m  |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mcbits/HsUnixCompat.c: In function ‘unix_minor’:

[;1mcbits/HsUnixCompat.c:14:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘minor’; did you mean ‘unix_minor’? [-Wimplicit-function-declaration]
         return minor(dev);
                ^~~~~
                unix_minor[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m14 |[0m[0m     return [;1m[31mm[0m[0minor(dev);
[;1m[34m   |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mcbits/HsUnixCompat.c: In function ‘unix_makedev’:

[;1mcbits/HsUnixCompat.c:19:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: implicit declaration of function ‘makedev’; did you mean ‘unix_makedev’? [-Wimplicit-function-declaration]
         return makedev(maj, min);
                ^~~~~~~
                unix_makedev[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m19 |[0m[0m     return [;1m[31mm[0m[0makedev(maj, min);
[;1m[34m   |[0m[0m[;1m[31m            ^[0m[0m
[0m[0m[0mInstalling library in /home/b/.stack/snapshots/x86_64-linux-tinfo6/lts-11.15/8.2.2/lib/x86_64-linux-ghc-8.2.2/unix-compat-0.5.0.1-AtNnJ204ySI1W22dRbQG6f
Registering library for unix-compat-0.5.0.1..
